# homelab

./: .gitattributes  .gitignore  .markdownlint.jsonc  CONTRIBUTING.md  Makefile  README.md  galaxy.yml  pyproject.toml  requirements.yml  ssh_config
apps/: Makefile
apps/n8n/: docker-compose.yml
apps/open-webui/: docker-compose.yml
iso/: .gitignore  Makefile
metal/: Makefile  README.md  hosts.yml  macos.yml  proxmox.yml  requirements.yml
metal/files/: Brewfile
metal/inventories/prod/: hosts.yml
metal/playbooks/: diskstation.yml  proxmox.yml
metal/roles/proxmox/: Makefile
metal/rtx/: README.md  main.yml
playbooks/: Makefile  README.md  diskstation.yml  macos.yml  ondemand.py  ondemand_ubuntu_aarch64.yml  ondemand_ubuntu_x86_64.yml  proxmox.yml  requirements.yml  rtx1210.yml  ssh_config  ubuntu_cloud.yml  ubuntu_dev.yml  ubuntu_vm.yml  win_vm_gpu.yml  windows.yml  windows_dev.yml  windows_gpu.yml  windows_home.yml  wsl.yml
playbooks/files/: Brewfile
playbooks/metal/: README.md  requirements.yml
playbooks/scripts/: setup.ps1  setup.sh
playbooks/vm/: Makefile  README.md  requirements.yml  windows_dev.yml
roles/: Makefile  README.md
roles/defaults/: Makefile  README.md
roles/dev/: Makefile  README.md
roles/homebrew/: README.md
roles/microk8s/: README.md
roles/onepassword/: README.md
roles/posix/: Makefile  README.md
roles/proxmox/: Makefile
roles/qemu_guest_agent/: README.md
src/homelab/: __init__.py
vm/: Makefile  coredns.yml  requirements.yml  ubuntu_dev.yml  windows_dev.yml
vm/templates/: Corefile
(+125 files in other folders)
