[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ansible>=6.7.0",
    "molecule>=4.0.4",
    "molecule-docker>=2.1.0",
    "pywinrm>=0.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
