[project]
name = "homelab"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=10.3.0",
    "molecule>=24.8.0",
    "molecule-docker>=2.1.0",
    "pywinrm>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
